# vocab_template

./: .envrc  pyproject.toml
model/: README.md
